--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,9 @@
 	    <title>Portfolio</title>
 	  </head>
       <body style="background-color:mistyrose;">
-    <a href="file://dohome4/home4$/Student4/1844456/Am.html/index.html"> Home</a>
-    <a href="file://dohome4/home4$/Student4/1844456/Am.html/about%20me.html"> About me </a>
-    <a href="file://dohome4/home4$/Student4/1844456/Am.html/portfolio.html"> Portfolio </a>
+    <a href="index.html"> Home</a>
+    <a href="aboutme.html"> About me </a>
+    <a href="portfolio.html"> Portfolio </a>
  <h1 style="font-family:comic sans ms;font-size:250%"> About me!</h1>
  <h2 style="font-family:bookman;font-size:250%;color:white"> Family </h2>
  <a href='https://photos.google.com/share/AF1QipPCuIsioTOS0UEhpI__z4Hece0Qteqao23E4ZzZ1fBMpaf9ztCRfROZH642TWV7PA?key=R09kWW03UGFuOUMxeWpXRmhzbzhQWW1aWkJnYjVB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/zyq131SgP-lOq5skEz03D57upMBMZJRgHNMA5ORPO49ptYA9E-EZUmf6VIsUyUNX0Kp4ifmBijIgcnbMA89vHUHVLtwRJN6z2_fFhwTPijn9GHUJ_QFAnrzizicptX34HxwMQsmQ=w300' /></a>
