--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
 	    <title>Portfolio</title>
 	  </head>
       <body style="background-color:mistyrose;">
-    <a href="file://dohome4/home4$/Student4/1844456/Am.html/index.html"> Home</a>
-    <a href="file://dohome4/home4$/Student4/1844456/Am.html/about%20me.html"> About me </a>
-    <a href="file://dohome4/home4$/Student4/1844456/Am.html/portfolio.html"> Portfolio </a>
+    <a href="index.html"> Home</a>
+    <a href="aboutme.html"> About me </a>
+    <a href="portfolio.html"> Portfolio </a>
  <h1 style="font-family:comic sans ms;font-size:250%"> This is my Portfolio Page!</h1>
  <a href='https://photos.google.com/share/AF1QipNQcqfTEBEanGPc2Ksl_tOXZcZ-bgLgs9wEYj7hjphjAKICtB_EDIjykmQyB6i5-A?key=RGdxbHRJc1F4eXlMZFFPeWNIdm5QVUotcVd5aWd3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/fyjEMFhGKpId6ZmXsXv1-A5tvvANnuUed0QwfDaQJvY8cHTL5WZA3Q8EpzqeAqESZAZrRHPLzEY4KExL9NCTZGeiEa-bdsXeUYmmFWjKeKRSk_ThebO3N3Vq9uhCpk8_T2NsAZC5=w400' /></a>
