--- a/aboutme.html
+++ b/aboutme.html
@@ -20,9 +20,10 @@
  <h2 style="font-family:bookman;font-size:250%;color:white"> Dance </h2>
  <a href='https://photos.google.com/share/AF1QipOI4Mdzgi0j4hoVGIH9ytDWw7bFLWQGgtRfIIrw_IP_sd9lEJYVmVVp1tws6Iy4bg?key=c2Rha3RNWE8yb01xLTBKQjdNdjZVOUVLbF8ySk13&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/LN4c7E1FAU-r82gq35zlnTYm_KDs7jfZRRd2YWZO4nOup1jBeQqN3WoCYeK_8-QDqFApQA82di4GRXMF3QBx2WBxiLXb58jInmjPdImpqPkDa1RWuUS_Sotwsns3Dh2VqkuX2Sa5=w300' /></a>
  
-    <p style="color:pink;font-family:comic sans ms;font-size:150%"> I have been dancing since I was 3 years old, and have competed dance for almost 7 years. I am currently captain of the Rancho Bernardo High School Dance Team. 
-    <br> 
-    <br>
+    <p style="color:pink;font-family:comic sans ms;font-size:150%"> I have been dancing since I was 3 years old, and have competed dance for almost 7 years. I am currently captain of Tour de Force, the varsity dance team at RBHS.
+Most of my time is dedicated to dance, and it has been a very influential aspect of my life.
+<br> 
+<br>
     <a href='https://photos.google.com/share/AF1QipMYshYKD3KqyomilSmE05DuqaDUeXenHGWJFGgcWtEHar7WRyMsWotdRJSVEJSShw?key=MUUtWk1TWXFCMlg1ZmJWTTFrWDhxZkZiZGx5QkxR&source=ctrlq.org'>
     <img src='https://lh3.googleusercontent.com/gtFYNBx-zvv4Xm-gEz_-aQH084n8-Z6R_klBFAFjJTDtntFRi5U1PQpCSsWV5yXaBLbH7PNruU5AE7D-FHUjxbF9mltFLf7sdrReYhSwbM4LRUDJSVl90mLl8Dom5yKCgPlIWqyJ=w200'/>
     <img src='https://lh3.googleusercontent.com/jCjgfb6DiRNT6fREcgFUNKjpztMPVyOfTcCZLr2LDEca7FdttbOYUli7inoSE-VOYjzIo3eb_8yjGi_aX-vTTXoJdLWsbHeQ6QZb_DfL1xVeuOUVCNGAc2Ed18KI_actnE_0VESs=w300'/>
@@ -30,7 +31,7 @@
     </a>
 <h2 style="font-family:bookman;font-size:250%;color:white"> Friends </h2>
 <a href='https://photos.google.com/share/AF1QipO7l-pEJGEeSeiTVpdLdmiNN1c5xxUatMxGnPRL37eZW7JYDM2nRMJdTq8XiNQlLQ?key=OG54d0NUdWlCTHhuRlA4LWRZMG9CTGt6Z19HbkF3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/QZC83g44nYvVC7wPeBhzSx07r_9tGbNXfWq3KrtRH9PUzct3M-YIIkALPTF6U1s6L7CGnYycRENVEYEfagmLHZ2JufkPgTAvgTVtlTVITczPps9IJJRlZvZ9UN7EeWvgwtbFoG7k=w400' /></a>
-<p style="color:pink;font-family:comic sans ms;font-size:150%"> When I have free time, I have a handful of great people I love to spend time with. I have a mix of friends from school, work, and dance, and I love hanging out with each and every one of them! (:
+<p style="color:pink;font-family:comic sans ms;font-size:150%"> When I have free time, I have a handful of amazing people that I love to spend time with. I have a mix of friends from school, work, and dance, and I love hanging out with each and every one of them! (:
 <br>
 <a href='https://photos.google.com/share/AF1QipM5SLdDZQTAtt0ChKsenNFnmMYap9bsRfomD_UCvzJG_ckWRgLcv9icexdvqS1d0Q?key=c09Mdjh0S0tZWmRZUG9FN3lLUnFsc3dUempRZEpB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/yPYhsLNRtUIW6sbo0qTqMXM0llFZhNrv3U9YpVBV919y40qzuQ4vvuAWPwv8pWyuq6c2F6BTRhhi85mc9Je6xG8VIDhyVoFFlZF3xxPoWScan1BU34ez153HQ8qZ0o1qtTSuS2U9=w200' />
 <img src='https://lh3.googleusercontent.com/Num8QTVDX_PChh6X5CaabJt1KS3jw2XgOXftTO0kkVwfZEPcvcCvNcO3gHrFpUZaCzkctUSL-SOXMhL8N6pDDvyfXxn0kE3HwpZwT1XXPVSoeyQiVIjmduilKr7L1Bf-4Cz-xzj3=w200' />
