--- a/aboutme.html
+++ b/aboutme.html
@@ -11,8 +11,8 @@
  <h1 style="font-family:comic sans ms;font-size:250%"> About me!</h1>
  <h2 style="font-family:bookman;font-size:250%;color:white"> Family </h2>
  <a href='https://photos.google.com/share/AF1QipPCuIsioTOS0UEhpI__z4Hece0Qteqao23E4ZzZ1fBMpaf9ztCRfROZH642TWV7PA?key=R09kWW03UGFuOUMxeWpXRmhzbzhQWW1aWkJnYjVB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/zyq131SgP-lOq5skEz03D57upMBMZJRgHNMA5ORPO49ptYA9E-EZUmf6VIsUyUNX0Kp4ifmBijIgcnbMA89vHUHVLtwRJN6z2_fFhwTPijn9GHUJ_QFAnrzizicptX34HxwMQsmQ=w300' /></a>
- <p style="color:pink;font-family:comic sans ms;font-size:150%"> My family consists of five people. My older sister Gaby, my younger sister Sofia, my mom Brenda, and my dad Blaine. Family is a very important part of my life.
-    <br> 
+ <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> My family consists of five people. My older sister Gaby, my younger sister Sofia, my mom Brenda, and my dad Blaine. Family is a very important part of my life. </b></p>
+	      <br> 
     <a href='https://photos.google.com/share/AF1QipPp3ZF_PuQ6kXdpq1gWaz4e7O97RkTbHsd1qYr3Db7Hjurrv2SEn2Tlf1AnMSMKvQ?key=cWVHbE5md25mWUY2RHVRSmZMNGtjS3JFLTdyTml3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/Xmzn9zWzXExnO6KxzfDyFDVIvKJzz0SWSeLEonlinY3IKJDIx5qDoqrssc5IGEEcn-pHYxaR3XlTsenpIRJ_qZ37aDBXjZuaF9eJfhYXIkDQsTcn3ngY5BowLmN_1Tza2KTaMMJT=w300' />
     <img src='https://lh3.googleusercontent.com/nlELtCp6GPWykexHOf0ALgE86gOWn__vwyYT9TY7zf3ZmLmc8jqDNaX51p6XaDYto5gD74Nlsaq6mAKohsmWR9BgLyeiDtKx5vx1Q8CyH2RPYl_ENidEPBYvczJ9qvq9N_EyIZij=w200' />
 <img src='https://lh3.googleusercontent.com/dpKmxDIcrZrTEAbA6A6ArE8_qRxaphc9U_QKCZg1x2Dr75l_RvcLiAm7_Y8YdIKvI1c7XOwMS4LfuBdJZlDUcdCHM43JKnGnnHsxk6r9bnF5ln25qI_hIYZlY3bW2Z60cCl-vUyL=w300' /></a>
