--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
  <h2 style="font-family:bookman;font-size:250%;color:white"> Dance </h2>
  <a href='https://photos.google.com/share/AF1QipOI4Mdzgi0j4hoVGIH9ytDWw7bFLWQGgtRfIIrw_IP_sd9lEJYVmVVp1tws6Iy4bg?key=c2Rha3RNWE8yb01xLTBKQjdNdjZVOUVLbF8ySk13&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/LN4c7E1FAU-r82gq35zlnTYm_KDs7jfZRRd2YWZO4nOup1jBeQqN3WoCYeK_8-QDqFApQA82di4GRXMF3QBx2WBxiLXb58jInmjPdImpqPkDa1RWuUS_Sotwsns3Dh2VqkuX2Sa5=w300' /></a>
  
-    <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> I have been dancing since I was 3 years old, and have competed dance for almost 7 years. I am currently captain of Tour de Force, the varsity dance team at RBHS.
+    <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> I have been dancing since I was 3 years old and have competed dance for almost 7 years. I am currently captain of Tour de Force, the varsity dance team at RBHS.
 	    Most of my time is dedicated to dance, and it has been a very influential aspect of my life. </b></p>
 <br> 
 <br>
