--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="portfolio.html"> Portfolio </a>
 
  <h1 style="font-family:comic sans ms;font-size:350%"> This is Aly's Porfolio Page!</h1>
- <a href='https://photos.google.com/share/AF1QipMOjj4BB4_ZUK9n7lu3m1nspnHkmtIDFznO3B_RMTfs8eI_D5rr5oRrvy89CJtkKA?key=dk5HcE0xeW1USFUtNzdJRDhHZUJZVjBsQ3RHVmZn&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/ZQCgPOCEfQCuPIkuUxXbJ53Y3zrcQdbQQzEJoiSoSfNW2rA560YXejSGuoONsQQmE4u51vS1BC8LJAnE_bao7DZypbPRrbRh5NK-ylRagwKxmyOjiEEiMInzt3UDgLXwE5E_blCJ=w350' /></a>
+<img src="sunflower.jpg"/>
  <p style="color:pink;font-family:comic sans ms;font-size:200%"><b> Hi! I'm Aly Maas. I'm 16 years old and a senior at Rancho Bernardo High School. Welcome to my home page :) </b> </p>
     </a>
 	  </body>
