--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	    <title>Portfolio</title>
 	  </head>
       <body style="background-color:mistyrose;">
-    <a href="index.html"> Home</a>
+    <a href="https://alymaas.github.io/alymaascsp2019/"> Home</a>
     <a href="aboutme.html"> About me </a>
     <a href="portfolio.html"> Portfolio </a>
 
