--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <a href="aboutme.html"> About me </a>
     <a href="portfolio.html"> Portfolio </a>
  <h1 style="font-family:comic sans ms;font-size:250%"> About me!</h1>
- <h2 style="font-family:bookman;font-size:250%;color:white"> Family </h2>
+ <h2 style="font-family:bookman;font-size:250%;color:purple"> Family </h2>
  <a href='https://photos.google.com/share/AF1QipPCuIsioTOS0UEhpI__z4Hece0Qteqao23E4ZzZ1fBMpaf9ztCRfROZH642TWV7PA?key=R09kWW03UGFuOUMxeWpXRmhzbzhQWW1aWkJnYjVB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/zyq131SgP-lOq5skEz03D57upMBMZJRgHNMA5ORPO49ptYA9E-EZUmf6VIsUyUNX0Kp4ifmBijIgcnbMA89vHUHVLtwRJN6z2_fFhwTPijn9GHUJ_QFAnrzizicptX34HxwMQsmQ=w300' /></a>
  <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> My family consists of five people. My older sister Gaby, my younger sister Sofia, my mom Brenda, and my dad Blaine. Family is a very important part of my life. </b></p>
 	      <br> 
@@ -17,7 +17,7 @@
     <img src='https://lh3.googleusercontent.com/nlELtCp6GPWykexHOf0ALgE86gOWn__vwyYT9TY7zf3ZmLmc8jqDNaX51p6XaDYto5gD74Nlsaq6mAKohsmWR9BgLyeiDtKx5vx1Q8CyH2RPYl_ENidEPBYvczJ9qvq9N_EyIZij=w200' />
 <img src='https://lh3.googleusercontent.com/dpKmxDIcrZrTEAbA6A6ArE8_qRxaphc9U_QKCZg1x2Dr75l_RvcLiAm7_Y8YdIKvI1c7XOwMS4LfuBdJZlDUcdCHM43JKnGnnHsxk6r9bnF5ln25qI_hIYZlY3bW2Z60cCl-vUyL=w300' /></a>
  
- <h2 style="font-family:bookman;font-size:250%;color:white"> Dance </h2>
+ <h2 style="font-family:bookman;font-size:250%;color:purple"> Dance </h2>
  <a href='https://photos.google.com/share/AF1QipOI4Mdzgi0j4hoVGIH9ytDWw7bFLWQGgtRfIIrw_IP_sd9lEJYVmVVp1tws6Iy4bg?key=c2Rha3RNWE8yb01xLTBKQjdNdjZVOUVLbF8ySk13&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/LN4c7E1FAU-r82gq35zlnTYm_KDs7jfZRRd2YWZO4nOup1jBeQqN3WoCYeK_8-QDqFApQA82di4GRXMF3QBx2WBxiLXb58jInmjPdImpqPkDa1RWuUS_Sotwsns3Dh2VqkuX2Sa5=w300' /></a>
  
     <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> I have been dancing since I was 3 years old and have competed dance for almost 7 years. I am currently captain of Tour de Force, the varsity dance team at RBHS.
@@ -29,7 +29,7 @@
     <img src='https://lh3.googleusercontent.com/jCjgfb6DiRNT6fREcgFUNKjpztMPVyOfTcCZLr2LDEca7FdttbOYUli7inoSE-VOYjzIo3eb_8yjGi_aX-vTTXoJdLWsbHeQ6QZb_DfL1xVeuOUVCNGAc2Ed18KI_actnE_0VESs=w300'/>
     <img src='https://lh3.googleusercontent.com/teM6GZdUJi4nazZlgqH3yVnlyOI8Sifpe-4NF4tqFG1FUKbYo5_Gij-rSMbBWBzF9jwZFfepDBnMMQL1hcxrhRfgGPES52VA9OdB7YeXNTItZ-7yak9xIjJK_nz5HfZxmOG5lhy7=w200'/>
     </a>
-<h2 style="font-family:bookman;font-size:250%;color:white"> Friends </h2>
+<h2 style="font-family:bookman;font-size:250%;color:purple"> Friends </h2>
 <a href='https://photos.google.com/share/AF1QipO7l-pEJGEeSeiTVpdLdmiNN1c5xxUatMxGnPRL37eZW7JYDM2nRMJdTq8XiNQlLQ?key=OG54d0NUdWlCTHhuRlA4LWRZMG9CTGt6Z19HbkF3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/QZC83g44nYvVC7wPeBhzSx07r_9tGbNXfWq3KrtRH9PUzct3M-YIIkALPTF6U1s6L7CGnYycRENVEYEfagmLHZ2JufkPgTAvgTVtlTVITczPps9IJJRlZvZ9UN7EeWvgwtbFoG7k=w400' /></a>
 <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> When I have free time, I have a handful of amazing people that I love to spend time with. I have a mix of friends from school, work, and dance, and I love hanging out with each and every one of them! (: </b></p>
 <br>
