--- a/portfolio.html
+++ b/portfolio.html
@@ -12,4 +12,7 @@
  <br>
 <h2 style="font-family:comic sans ms;font-size:250%"> Into the City </h2>
 <br>
-<iframe src="https://scratch.mit.edu/projects/328032795/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/328032795/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<br>
+<h2 style="font-family:comic sans ms;font-size:250%"> Duck Saver </h2>
+<img src="duckysky.jfif" width="400" height "400"/> 
