--- a/portfolio.html
+++ b/portfolio.html
@@ -16,3 +16,5 @@
 <br>
 <h2 style="font-family:comic sans ms;font-size:250%"> Duck Saver </h2>
 <img src="duckysky.jfif" width="400" height "400"/> 
+<img src="ducky.jpg" width="400" height="400"/> 
+<p style 
