--- a/portfolio.html
+++ b/portfolio.html
@@ -17,4 +17,5 @@
 <h2 style="font-family:comic sans ms;font-size:250%"> Duck Saver </h2>
 <img src="duckysky.jfif" width="400" height "400"/> 
 <img src="ducky.jpg" width="400" height="400"/> 
-<p style 
+<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
+you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
