--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,6 @@
 <br>
 <h2 style="font-family:comic sans ms;font-size:250%"> Duck Saver </h2>
 <img src="duckysky.jfif" width="400" height "400"/> 
-<img src="ducky.jpg" width="400" height="400"/> 
+<img src="duck2.jpg" width="400" height="200"/> 
 <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
 you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
