--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,29 @@
 <html lang="en">
-	  <head>
-	    <meta charset="utf-8">
-	    <title>Portfolio</title>
-	  </head>
-      <body style="background-color:mistyrose;">
-    <a href="https://alymaas.github.io/alymaascsp2019/"> Home</a>
-    <a href="aboutme.html"> About me </a>
-    <a href="portfolio.html"> Portfolio </a>
- <h1 style="font-family:comic sans ms;font-size:250%"> This is my Portfolio Page!</h1>
- <a href='https://photos.google.com/share/AF1QipNQcqfTEBEanGPc2Ksl_tOXZcZ-bgLgs9wEYj7hjphjAKICtB_EDIjykmQyB6i5-A?key=RGdxbHRJc1F4eXlMZFFPeWNIdm5QVUotcVd5aWd3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/fyjEMFhGKpId6ZmXsXv1-A5tvvANnuUed0QwfDaQJvY8cHTL5WZA3Q8EpzqeAqESZAZrRHPLzEY4KExL9NCTZGeiEa-bdsXeUYmmFWjKeKRSk_ThebO3N3Vq9uhCpk8_T2NsAZC5=w400' /></a>
- <br>
-<h2 style="font-family:bookman;font-size:250%;color:purple"> Into the City </h2>
-<br>
-<iframe src="https://scratch.mit.edu/projects/328032795/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<br>
-<h2 style="font-family:bookman;font-size:250%;color:purple"> Duck Saver </h2>
-<img src="duckysky.jfif" width="400" height "400"/> 
-<img src="duck2.jpg" width="400" height="220"/> 
-<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
-you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
+	<head>
+    		<meta charset="utf-8">
+    		<title>Portfolio</title>
+  	</head>
+	<body style="background-color:mistyrose;">
+    		<a href="https://alymaas.github.io/alymaascsp2019/"> Home</a>
+		<a href="aboutme.html"> About me </a>
+    		<a href="portfolio.html"> Portfolio </a>
+ 		<h1 style="font-family:comic sans ms;font-size:250%"> This is my Portfolio Page!</h1>
+ 		<a href='https://photos.google.com/share/AF1QipNQcqfTEBEanGPc2Ksl_tOXZcZ-bgLgs9wEYj7hjphjAKICtB_EDIjykmQyB6i5-A?key=RGdxbHRJc1F4eXlMZFFPeWNIdm5QVUotcVd5aWd3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/fyjEMFhGKpId6ZmXsXv1-A5tvvANnuUed0QwfDaQJvY8cHTL5WZA3Q8EpzqeAqESZAZrRHPLzEY4KExL9NCTZGeiEa-bdsXeUYmmFWjKeKRSk_ThebO3N3Vq9uhCpk8_T2NsAZC5=w400' /></a>
+ 		<br>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Into the City </h2>
+		<br>
+		<iframe src="https://scratch.mit.edu/projects/328032795/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
+		<br>	
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Duck Saver </h2>
+		<img src="duckysky.jfif" width="400" height "400"/> 
+		<img src="duck2.jpg" width="400" height="220"/> 
+		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
+			you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
+		<br>
+		<iframe src="https://InteractiveFiction.aayushichaudhry.repl.run" height = "420" width = "100%">
+ 			<p>Your browser does not support iframes.</p>
+		</iframe>
+		<br>
+		<p>Someting about it.</p>
+	</body>
+</html>
