--- a/portfolio.html
+++ b/portfolio.html
@@ -19,3 +19,7 @@
 <img src="duck2.jpg" width="400" height="220"/> 
 <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
 you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
+<br>
+<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0 </h2>      
+<br>
+<iframe height="400px" width="100%" src="https://repl.it/@aayushichaudhry/InteractiveFiction?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>      
