--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
  		<h1 style="font-family:comic sans ms;font-size:250%"> This is my Portfolio Page!</h1>
  		<a href='https://photos.google.com/share/AF1QipNQcqfTEBEanGPc2Ksl_tOXZcZ-bgLgs9wEYj7hjphjAKICtB_EDIjykmQyB6i5-A?key=RGdxbHRJc1F4eXlMZFFPeWNIdm5QVUotcVd5aWd3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/fyjEMFhGKpId6ZmXsXv1-A5tvvANnuUed0QwfDaQJvY8cHTL5WZA3Q8EpzqeAqESZAZrRHPLzEY4KExL9NCTZGeiEa-bdsXeUYmmFWjKeKRSk_ThebO3N3Vq9uhCpk8_T2NsAZC5=w400' /></a>
  		<br>
-		<h2 style="font-family:bookman;font-size:250%;color:purple"> Into the City </h2>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Into the City- Scratch </h2>
 		<br>
 		<iframe src="https://scratch.mit.edu/projects/328032795/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
 		<br>	
-		<h2 style="font-family:bookman;font-size:250%;color:purple"> Duck Saver </h2>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Duck Saver- MIT App Inventor 2 </h2>
 		<img src="https://raw.githubusercontent.com/JonnyHo/JonnyHo.github.io/master/images/MITAppInventor2.PNG" width="800" height="600"/>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
 			you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
@@ -23,6 +23,10 @@
 		<br>
 		<iframe src="https://InteractiveFiction.aayushichaudhry.repl.run" height = "420" width = "100%">
 		<br>
-		<p>Someting about it.</p>
+		<p> HSM 2.0 is another basic love story between two teenagers. Our interactive fiction allows you to choose which character you'd like to be and you will discover the ways their story could play out</p>
+		<br>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Roman Numeral Converter- Python </h2>
+		<img src="romannumeralconverter.jpg" width="800" height="600"/>
+		<br>
 	</body>
 </html>
