--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 		<a href="aboutme.html"> About me </a>
     		<a href="portfolio.html"> Portfolio </a>
  		<h1 style="font-family:comic sans ms;font-size:250%"> This is my Portfolio Page!</h1>
- 		<a href='https://photos.google.com/share/AF1QipNQcqfTEBEanGPc2Ksl_tOXZcZ-bgLgs9wEYj7hjphjAKICtB_EDIjykmQyB6i5-A?key=RGdxbHRJc1F4eXlMZFFPeWNIdm5QVUotcVd5aWd3&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/fyjEMFhGKpId6ZmXsXv1-A5tvvANnuUed0QwfDaQJvY8cHTL5WZA3Q8EpzqeAqESZAZrRHPLzEY4KExL9NCTZGeiEa-bdsXeUYmmFWjKeKRSk_ThebO3N3Vq9uhCpk8_T2NsAZC5=w400' /></a>
+ 		<img src='https://lh3.googleusercontent.com/fyjEMFhGKpId6ZmXsXv1-A5tvvANnuUed0QwfDaQJvY8cHTL5WZA3Q8EpzqeAqESZAZrRHPLzEY4KExL9NCTZGeiEa-bdsXeUYmmFWjKeKRSk_ThebO3N3Vq9uhCpk8_T2NsAZC5=w400' /></a>
  		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> Into the City- Scratch </h2>
 		<br>
@@ -26,7 +26,7 @@
 		<p> HSM 2.0 is another basic love story between two teenagers. Our interactive fiction allows you to choose which character you'd like to be and you will discover the ways their story could play out</p>
 		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> Roman Numeral Converter- Python </h2>
-		<img src="romannumeralconverter.jpg" width="800" height="600"/>
+		<img src='https://lh3.googleusercontent.com/W3fH1xsRoDntec9OzRCZK3YZYigWfWTkY7m0cCOICpcqzGRISKk0c2QSeRiij682jAgGRimenq0ozA6vycHWExO3XQZJT5zhV5mv9RTagop_mX-d16H7pKFDGuk4vN_7jooTH82jqw=w2400' />
 		<br>
 	</body>
 </html>
