--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,8 @@
 		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<br>
-		<p> HSM 2.0 is another basic love story between two teenagers. Our interactive fiction allows you to choose which character you'd like to be and you will discover the ways their story could play out</p>
+		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
+			Our interactive fiction allows you to choose which character you'd like to be and you will discover the ways their story could play out</b></p>
 		<br>
 		<iframe src="https://InteractiveFiction.aayushichaudhry.repl.run" height = "420" width = "100%">
 		<br>
