--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
 			you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
 		<br>
-		<h style="font-family:bookman;font-size:250%;color:purple"> Roman Numeral Converter- Python </h>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Roman Numeral Converter- Python </h2>
 		<br>
-		<img src='https://lh3.googleusercontent.com/W3fH1xsRoDntec9OzRCZK3YZYigWfWTkY7m0cCOICpcqzGRISKk0c2QSeRiij682jAgGRimenq0ozA6vycHWExO3XQZJT5zhV5mv9RTagop_mX-d16H7pKFDGuk4vN_7jooTH82jqw=w2400' />
+		<img src='https://lh3.googleusercontent.com/W3fH1xsRoDntec9OzRCZK3YZYigWfWTkY7m0cCOICpcqzGRISKk0c2QSeRiij682jAgGRimenq0ozA6vycHWExO3XQZJT5zhV5mv9RTagop_mX-d16H7pKFDGuk4vN_7jooTH82jqw=w2000' />
 		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<br>
