--- a/aboutme.html
+++ b/aboutme.html
@@ -38,6 +38,11 @@
 <img src='https://lh3.googleusercontent.com/xMOibquRPrGqnu3LoKtp6JMnEkU3ALZcd4-qDRfeqqW4SBQwc5tLl3qbB3pRcrxtus1iM8sTwvoFAxN3TsLLaZ6cS_gBAnt2itrm59cGx20GZdFULqc_7acu-dWBujXk3l9IdJ_o=w200' />
 <img src='https://lh3.googleusercontent.com/JS4iC_9_2Zkr6gLvtpCLVOIx72dNXXSgyD4xbsx2kC8cnsqj1kbTUwUb3ed9Hebd52GIZSiqHotCAhSu6O6SwX9pblGrqzQmxzfHAv7pGt3X4cnsHXIgEpDtC2oAoweaUYC9yMuw=w200' />
 </a>
-    </a>
+</a>
+<h2 style="font-family:bookman;font-size:250%;color:purple"> Dance Videos </h2>
+<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> Here are a few of my favorite dances from the past 4 years on dance team. Enjoy!</b></p>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ks6KMjEovGE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 	  </body>
 	</html>
