--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
 <img src='https://lh3.googleusercontent.com/QZC83g44nYvVC7wPeBhzSx07r_9tGbNXfWq3KrtRH9PUzct3M-YIIkALPTF6U1s6L7CGnYycRENVEYEfagmLHZ2JufkPgTAvgTVtlTVITczPps9IJJRlZvZ9UN7EeWvgwtbFoG7k=w400' />
 <p style="color:pink;font-family:comic sans ms;font-size:150%"><b> When I have free time, I have a handful of amazing people that I love to spend time with. I have a mix of friends from school, work, and dance, and I love hanging out with each and every one of them! (: </b></p>
 <br>
-<a href='https://photos.google.com/share/AF1QipM5SLdDZQTAtt0ChKsenNFnmMYap9bsRfomD_UCvzJG_ckWRgLcv9icexdvqS1d0Q?key=c09Mdjh0S0tZWmRZUG9FN3lLUnFsc3dUempRZEpB&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/yPYhsLNRtUIW6sbo0qTqMXM0llFZhNrv3U9YpVBV919y40qzuQ4vvuAWPwv8pWyuq6c2F6BTRhhi85mc9Je6xG8VIDhyVoFFlZF3xxPoWScan1BU34ez153HQ8qZ0o1qtTSuS2U9=w200' />
+<img src='https://lh3.googleusercontent.com/yPYhsLNRtUIW6sbo0qTqMXM0llFZhNrv3U9YpVBV919y40qzuQ4vvuAWPwv8pWyuq6c2F6BTRhhi85mc9Je6xG8VIDhyVoFFlZF3xxPoWScan1BU34ez153HQ8qZ0o1qtTSuS2U9=w200' />
 <img src='https://lh3.googleusercontent.com/Num8QTVDX_PChh6X5CaabJt1KS3jw2XgOXftTO0kkVwfZEPcvcCvNcO3gHrFpUZaCzkctUSL-SOXMhL8N6pDDvyfXxn0kE3HwpZwT1XXPVSoeyQiVIjmduilKr7L1Bf-4Cz-xzj3=w200' />
 <img src='https://lh3.googleusercontent.com/xMOibquRPrGqnu3LoKtp6JMnEkU3ALZcd4-qDRfeqqW4SBQwc5tLl3qbB3pRcrxtus1iM8sTwvoFAxN3TsLLaZ6cS_gBAnt2itrm59cGx20GZdFULqc_7acu-dWBujXk3l9IdJ_o=w200' />
 <img src='https://lh3.googleusercontent.com/JS4iC_9_2Zkr6gLvtpCLVOIx72dNXXSgyD4xbsx2kC8cnsqj1kbTUwUb3ed9Hebd52GIZSiqHotCAhSu6O6SwX9pblGrqzQmxzfHAv7pGt3X4cnsHXIgEpDtC2oAoweaUYC9yMuw=w200' />
