--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,11 @@
 		<br>
 		<img src='https://lh3.googleusercontent.com/qhmj98k4WLCZu3A6fpI3E-FrDjuCwOgWI_cGLj-3cYvUlcGoQ3u_4Gb0AXovvvg4_f1ROVFBclWwc8J93p5Pgr_BUluLKdDXx6REwf-Y-XxhMGPj8pnL_seNSSM3wYe8uhDrjHLDsA=w2400' />
 		<br>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Image Manipulation- Python </h2>
+		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> This Python code allowed us to manipulate the color scheme of an image by changing the individual pixels. How cool! </b></p>
+		<br>
+		<img src= 'https://lh3.googleusercontent.com/VfRt94C5uro0HdTv6EdSG4LIPKAY7XOOrefxzFEQATuvG8X2VnBcJN6fUFhZqF81czT9d_v6-kIWfeJXVWeyRGDjrdAPtdXdJh6FYlc9m4jS6p4TuMwrRAgOAMNBHIPvN6ELOFiQ9Q=w2400' />
+		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
