--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,9 @@
 		<br>
 		<img src= 'https://lh3.googleusercontent.com/VfRt94C5uro0HdTv6EdSG4LIPKAY7XOOrefxzFEQATuvG8X2VnBcJN6fUFhZqF81czT9d_v6-kIWfeJXVWeyRGDjrdAPtdXdJh6FYlc9m4jS6p4TuMwrRAgOAMNBHIPvN6ELOFiQ9Q=w2400' />
 		<br>
+		<img src= 'https://lh3.googleusercontent.com/L2RM52gnkc1g5_e6ZBwg-iBJx8poeTJwVJdfAu1kwybzWayXZNHw1YmyIaYvd1f2ky1_RIW6YlztdCvmRMm_9dVlI0sGobr2Q2OJd9YEJfdE1vcmSYdDdncDUvnP2InQxrZkyoHyrw=w400' />
+		<img src= 'https://lh3.googleusercontent.com/2UYWEgdqVy-BL-tJMFPi36k-2sqgQfMUJEQ-oRlQH3MEBjqm-zjoFTLC5vbFleXxuXio4iFvNbQpDuPDdGaF81f0mxICAeR3cLUwVgmz_b1cV8c2r85uEx3bvUwQC4OpiD0wWdIt_A=w400' />
+		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
