--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,11 @@
 		<img src= 'https://lh3.googleusercontent.com/L2RM52gnkc1g5_e6ZBwg-iBJx8poeTJwVJdfAu1kwybzWayXZNHw1YmyIaYvd1f2ky1_RIW6YlztdCvmRMm_9dVlI0sGobr2Q2OJd9YEJfdE1vcmSYdDdncDUvnP2InQxrZkyoHyrw=w400' />
 		<img src= 'https://lh3.googleusercontent.com/970vQWbTAnBD1k1iAsxgOUbjtXsdBSpkRcpoCLVz3nO626LV7PgddkvO8FBrhi6sIWmJPk-Sz9c8TAz20AF7HYl7RI96zNOtNJKsalRnNyJnR_P5Cjmw89KksvKbEkDUWCoHQUxW0w=w600' />
 		<br>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Explore the Galaxy- Scratch </h2>
+		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> This game was made for the "Create" Peformance Task on the AP Exam. The purpose of the game is to maneuver a rocketship around 
+			space without getting hit. There are three super fun levels. b></p>
+		<iframe src="https://scratch.mit.edu/projects/351115608/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
+		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
