--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
 		<iframe src="https://scratch.mit.edu/projects/328032795/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
 		<br>	
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> Duck Saver- MIT App Inventor 2 </h2>
-		<img src="https://raw.githubusercontent.com/JonnyHo/JonnyHo.github.io/master/images/MITAppInventor2.PNG" width="800" height="600"/>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> On MIT App Inventor 2, we developed an app called Duck Saver. As the duck moves across the grass, 
 			you must tap all of the bullets in the sky to help him cross safely. Super fun!</b></p>
+		<img src="https://raw.githubusercontent.com/JonnyHo/JonnyHo.github.io/master/images/MITAppInventor2.PNG" width="800" height="600"/>
 		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> Roman Numeral Converter- Python </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> Our Python code allows users to convert to or from Roman Numerals in a quick and convenient way! </b></p>
@@ -33,7 +33,7 @@
 		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> Explore the Galaxy- Scratch </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> This game was made for the "Create" Peformance Task on the AP Exam. The purpose of the game is to maneuver a rocketship around 
-			space without getting hit. There are three super fun levels. b></p>
+			space without getting hit. There are three super fun levels. </b></p>
 		<iframe src="https://scratch.mit.edu/projects/351115608/embed" allowtransparency="true" width="400" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
 		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
