--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,9 @@
 		easier to visualize what percent of total movies each company made. We concluded that Universal Studios made the most movies out of the Major 6 Companies, but the highest percent of total 2019 movies were 
 		produced by other studios combined. </b></p>
 		<a href="https://https://www.the-numbers.com/market/"> Click here to view our source of data </a>
-		
+		<img src= "movie pie chart.png" width="400" height="400" />
+		<img src= "moviepiechartcode.png" width="400" height="400" />
+		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
