--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
 		<br>
-		<iframe src="https://InteractiveFiction.aayushichaudhry.repl.run" height = "420" width = "100%">
+		<iframe height="400px" width="100%" src="https://repl.it/@aayushichaudhry/InteractiveFiction?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 		<br>
 	</body>
 </html>
