--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,13 @@
 		<img src= "movie pie chart.png" width="400" height="400" />
 		<img src= "moviepiechartcode.png" width="600" height="400" />
 		<br>
+		<h2 style="font-family:bookman;font-size:250%;color:purple"> Simple Birth Rates- NetLogo </h2>
+		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> In this project, we modified a pre-exisiting simulation on NetLogo which 
+		compared the birth rates of two groups. We changed the icons to turtles, we increased the size of the stage where the simulation takes place, 
+		and we altered the starting values of the populations to be unequal. In the end, our modifed simulation taught us that fertility is the determining
+		factor of population growth, as a fertility rate that is just 0.1 lower would cause a population to die out faster, even if the group had a significantly
+		higher starting value. </b></p>
+		<br> 
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
