--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,10 @@
 		and we altered the starting values of the populations to be unequal. In the end, our modifed simulation taught us that fertility is the determining
 		factor of population growth, as a fertility rate that is just 0.1 lower would cause a population to die out faster, even if the group had a significantly
 		higher starting value. </b></p>
-		<br> 
+		<br>
+		<img src= "NetLogo.ogscreenshot.png" width="800" height="600" />
+		<img src= "NetLogo.modifiedscreenshot.png" width="800" height="600" />
+		<br>
 		<h2 style="font-family:bookman;font-size:250%;color:purple"> HSM 2.0- Interactive Fiction </h2>
 		<p style="color:pink;font-family:comic sans ms;font-size:150%"><b> HSM 2.0 is another basic love story between two teenagers.
 			Our interactive fiction allows you to choose which character you'd like to be, and you will discover the ways in which their story could play out! </b></p>
